using System;
using System.Collections;
using System.Text;
using System.Text.RegularExpressions;
using TMPro;
using UnityEngine;
using UnityEngine.Networking;
using UnityEngine.UI;

// â­ï¸ [ì¶”ê°€ë¨] ìŠ¤í¬ë¦°ìƒ·(P/Invoke)ì— í•„ìš”í•œ ë„¤ì„ìŠ¤í˜ì´ìŠ¤
using System.Runtime.InteropServices;
using System.Drawing; // ğŸ‘ˆ [ì¤‘ìš”] System.Drawing.dllì„ Assets í´ë”ì— ì¶”ê°€í•´ì•¼ í•©ë‹ˆë‹¤!
using System.Drawing.Imaging;
using System.IO;


public class ChatInputManager : MonoBehaviour
{
    [Header("í•„ìˆ˜ ì—°ê²° ìš”ì†Œ")]
    public TMP_InputField questionInputField; // ì§ˆë¬¸ ì¸í’‹
    public PopupSpawner popupSpawner;         // íŒì—… ìƒì„±ê¸°
    public UIAnimator inputFieldAnimator;     // ì¸í’‹ ì• ë‹ˆë©”ì´í„°

    [Header("ë°°ê²½ ë²„íŠ¼ (ë‹«ê¸°ìš©)")]
    public GameObject backgroundClickCatcher;

    [Header("ë°±ì—”ë“œ ì„¤ì •")]
    public string backendBaseUrl = "http://localhost:8080/gemini/simple";
    public string currentSessionId = "unityUser001";
    public string currentPersonaDomain = "tsundere";

    // â­ï¸ [ì¶”ê°€] ì´ ê°’ì„ ì‹¤ì œ ì‚¬ìš©í•˜ëŠ” IDë¡œ ë³€ê²½í•˜ì„¸ìš” (ì˜ˆ: "roy17-desktop")
    public string computerId = "roy17-desktop";

    [Header("ìºë¦­í„° í˜ë¥´ì†Œë‚˜ ì„¤ì •")]
    public GameObject kirbyCharacter;
    public string kirbyPersonaName = "kirby";

    public GameObject shihoCharacter;
    public string shihoPersonaName = "tsundere";

    // í˜„ì¬ ë–  ìˆëŠ” íŒì—…
    private PopupController _activePopup;

    // ë§ˆì§€ë§‰ ëŒ€í™” í…ìŠ¤íŠ¸
    private const string DEFAULT_GREETING = "ì•ˆë…•í•˜ì„¸ìš”! ë¬´ì—‡ì´ë“  ë¬¼ì–´ë³´ì„¸ìš”.";
    private string _lastConversationText = DEFAULT_GREETING;

    // ë§ˆì§€ë§‰ìœ¼ë¡œ ëŒ€í™”í•œ í˜ë¥´ì†Œë‚˜
    private string _lastActivePersonaDomain = "";

    void Start()
    {
        if (inputFieldAnimator != null)
            inputFieldAnimator.HideUI();

        if (backgroundClickCatcher != null)
            backgroundClickCatcher.SetActive(false);
    }

    // ë©”ì¸ ì±„íŒ… ë²„íŠ¼ì—ì„œ í˜¸ì¶œ
    public void OpenChatFlow()
    {
        if (inputFieldAnimator != null)
            inputFieldAnimator.ShowUI();

        if (backgroundClickCatcher != null)
            backgroundClickCatcher.SetActive(true);

        // ì–´ë–¤ ìºë¦­í„°ê°€ ì¼œì ¸ìˆëŠ”ì§€ ë³´ê³  ë„ë©”ì¸ ê²°ì •
        string activePersona = ResolveActivePersona();

        // ìºë¦­í„°ê°€ ë°”ë€Œì—ˆìœ¼ë©´ ëŒ€í™” ë¦¬ì…‹
        if (!string.IsNullOrEmpty(_lastActivePersonaDomain) &&
            _lastActivePersonaDomain != activePersona)
        {
            _lastConversationText = DEFAULT_GREETING;
        }

        // ê¸°ë³¸ ì¸ì‚¬ë§ ìºë¦­í„°ë³„ë¡œ ì„¸íŒ…
        if (_lastConversationText == DEFAULT_GREETING)
        {
            if (activePersona == kirbyPersonaName)
                _lastConversationText = "í•˜ì´! ë­ ë¬¼ì–´ë³¼ ê±°ì•¼?";
            else if (activePersona == shihoPersonaName)
                _lastConversationText = "íìŒ... ë­˜ ë¬¼ì–´ë³¼ ê±´ë°?";
        }

        _lastActivePersonaDomain = activePersona;

        if (popupSpawner != null)
        {
            _activePopup = popupSpawner.ShowPopupNearTarget();
            if (_activePopup != null)
                _activePopup.SetText(_lastConversationText);
        }

        if (questionInputField != null)
            questionInputField.ActivateInputField();
    }

    // ì¸í’‹í•„ë“œì—ì„œ ì—”í„°
    public void OnSubmitQuestion()
    {
        if (questionInputField == null || _activePopup == null)
            return;

        string question = questionInputField.text;
        if (string.IsNullOrWhiteSpace(question))
            return;

        questionInputField.text = "";
        questionInputField.ActivateInputField();

        StartCoroutine(HandleBackendResponse(question));
    }

    private IEnumerator HandleBackendResponse(string question)
    {
        if (_activePopup != null)
            _activePopup.SetText("ìƒê° ì¤‘...");

        string activePersona = ResolveActivePersona();
        string url = $"{backendBaseUrl}?sessionId={currentSessionId}&domain={activePersona}&computerId={computerId}";
        Debug.Log($"[ChatInputManager] ìš”ì²­: {url}");

        // 1. WWWForm ìƒì„±
        WWWForm form = new WWWForm();

        // 2. "question" í•„ë“œì— í…ìŠ¤íŠ¸ ì¶”ê°€
        form.AddField("question", question);

        byte[] screenshotBytes = null;

        // 3. "ì—¬ê¸°ì„œ" í‚¤ì›Œë“œê°€ í¬í•¨ë˜ë©´ ìŠ¤í¬ë¦°ìƒ· ìº¡ì²˜
        if (question.Contains("ì—¬ê¸°ì„œ"))
        {
            Debug.Log("[ChatInputManager] 'ì—¬ê¸°ì„œ' ê°ì§€ë¨. ë°ìŠ¤í¬íƒ‘ ìº¡ì²˜ ì‹œë„...");
            try
            {
                // â­ï¸ (ì£¼ì˜) ì´ ì‘ì—…ì€ ë™ê¸°ì‹ì´ë¯€ë¡œ ìº¡ì²˜ ë™ì•ˆ ì ì‹œ ë©ˆì¶œ ìˆ˜ ìˆìŠµë‹ˆë‹¤.
                screenshotBytes = DesktopCapture.CaptureDesktopAsPNG();

                if (screenshotBytes != null)
                {
                    // 4. "screenshot" í•„ë“œì— ì´ë¯¸ì§€ ë°”ì´íŠ¸ ì¶”ê°€
                    form.AddBinaryData("screenshot", screenshotBytes, "desktop_screenshot.png", "image/png");
                    Debug.Log($"[ChatInputManager] ë°ìŠ¤í¬íƒ‘ ìŠ¤í¬ë¦°ìƒ· í¼ì— ì¶”ê°€ ì™„ë£Œ (í¬ê¸°: {screenshotBytes.Length} bytes)");
                }
                else
                {
                    Debug.LogWarning("[ChatInputManager] ìŠ¤í¬ë¦°ìƒ· ìº¡ì²˜ ì‹¤íŒ¨ (Bytes == null)");
                }
            }
            catch (Exception e)
            {
                Debug.LogError($"[ChatInputManager] ìŠ¤í¬ë¦°ìƒ· ìº¡ì²˜ ì¤‘ ì˜ˆì™¸ ë°œìƒ: {e.Message}");
            }
        }

        // 5. WWWFormì„ ì‚¬ìš©í•˜ì—¬ POST ìš”ì²­ ìƒì„± (Content-Typeì´ multipart/form-dataë¡œ ìë™ ì„¤ì •ë¨)
        UnityWebRequest www = UnityWebRequest.Post(url, form);

        // â­ï¸ [ë³€ê²½ë¨] ê¸°ì¡´ text/plain ê´€ë ¨ í•¸ë“¤ëŸ¬ ë° í—¤ë” ì„¤ì • ì½”ë“œ ì‚­ì œ
        // byte[] bodyRaw = Encoding.UTF8.GetBytes(question); // (ì‚­ì œ)
        // www.uploadHandler = new UploadHandlerRaw(bodyRaw); // (ì‚­ì œ)
        // www.SetRequestHeader("Content-Type", "text/plain; charset=utf-8"); // (ì‚­ì œ)

        www.downloadHandler = new DownloadHandlerBuffer();

        yield return www.SendWebRequest();

        Debug.Log($"[ChatInputManager] ì‘ë‹µ ìƒíƒœ: {www.result}, ì½”ë“œ: {www.responseCode}");
        Debug.Log($"[ChatInputManager] ì‘ë‹µ ë³¸ë¬¸: {www.downloadHandler.text}");

        string finalText;

        if (www.result == UnityWebRequest.Result.ConnectionError ||
            www.result == UnityWebRequest.Result.ProtocolError)
        {
            finalText = "ì„œë²„ ì˜¤ë¥˜: " + www.error;
        }
        else
        {
            string raw = www.downloadHandler.text;

            // ... (ì´í•˜ JSON íŒŒì‹± ë° ê°ì • ì²˜ë¦¬ ë¡œì§ì€ ê¸°ì¡´ê³¼ ë™ì¼) ...

            // 1) ë°±ì—”ë“œê°€ ìš°ë¦¬ê°€ ë§í•œ í˜•íƒœë¡œ ë‚´ë ¤ì¤€ ê²½ìš°
            //    { "text": "...", "task": { "time": "...", "text": "..." } }
            BackendResponse parsed = null;
            try
            {
                parsed = JsonUtility.FromJson<BackendResponse>(raw);
            }
            catch
            {
                parsed = null;
            }

            if (parsed != null && !string.IsNullOrWhiteSpace(parsed.reply))
            {
                finalText = parsed.reply;

                // âœ… taskê°€ ìˆìœ¼ë©´ AlarmManagerì— ì €ì¥
                if (parsed.task != null &&
                    !string.IsNullOrWhiteSpace(parsed.task.time) &&
                    !string.IsNullOrWhiteSpace(parsed.task.text))
                {
                    Debug.Log($"[ALARM from backend] time={parsed.task.time}, task={parsed.task.text}");

                    // AlarmManagerë¡œ ì „ë‹¬í•˜ì—¬ ì €ì¥ (íŒŒì¼ + ë©”ëª¨ë¦¬)
                    var alarmManager = FindObjectOfType<AlarmManager>();
                    if (alarmManager != null)
                        alarmManager.SaveAlarm(parsed.task.time, parsed.task.text);
                    else
                        Debug.LogWarning("[ChatInputManager] AlarmManagerë¥¼ ì°¾ì§€ ëª»í•¨! ì €ì¥ ì‹¤íŒ¨");
                }
            }
            else
            {
                // 2) ê¸°ì¡´ Gemini ì›ë³¸ ê·¸ëŒ€ë¡œ ì˜¨ ê²½ìš° â†’ í…ìŠ¤íŠ¸ë§Œ ë½‘ê¸°
                string onlyText = ExtractGeminiText(raw);
                finalText = string.IsNullOrWhiteSpace(onlyText) ? raw : onlyText;
            }

            (string cleanedText, string detectedEmotion) = CleanAndDetectEmotion(finalText);
            finalText = cleanedText; // ì‹¤ì œ íŒì—…ì— í‘œì‹œë  í…ìŠ¤íŠ¸ (ëª¨ë‘ ì œê±°ëœ)

            if (_activePopup != null)
            {
                _activePopup.SetText(finalText);
                if (!string.IsNullOrEmpty(detectedEmotion))
                    Debug.Log($"[ê°ì • ê°ì§€ë¨] {detectedEmotion}");
                else
                    Debug.Log("[ê°ì • ì—†ìŒ]");
            }

            // 3. ê°ì •ì´ ê°ì§€ë˜ì—ˆìœ¼ë©´ ìºë¦­í„° Animatorì— Trigger ì „ì†¡
            if (!string.IsNullOrEmpty(detectedEmotion))
            {
                // 1. í™œì„±í™”ëœ ìºë¦­í„°ì˜ Animator ì°¾ê¸°
                Animator activeAnimator = null;
                if (kirbyCharacter != null && kirbyCharacter.activeInHierarchy)
                {
                    activeAnimator = kirbyCharacter.GetComponent<Animator>();
                }
                else if (shihoCharacter != null && shihoCharacter.activeInHierarchy)
                {
                    activeAnimator = shihoCharacter.GetComponent<Animator>();
                }

                if (activeAnimator != null)
                {
                    // 2. ê°ì§€ëœ ë¬¸ìì—´(string)ì„ Trigger ì´ë¦„(string)ìœ¼ë¡œ ë³€í™˜
                    string triggerName = "";
                    switch (detectedEmotion)
                    {
                        case "ê¸°ì¨":
                            triggerName = "isHappy"; // (Animatorì˜ Trigger ì´ë¦„ê³¼ ì¼ì¹˜í•´ì•¼ í•¨)
                            break;
                        case "ìŠ¬í””":
                            triggerName = "isSad";
                            break;
                        case "í™”ë‚¨":
                            triggerName = "isAngry";
                            break;
                            // "ë³´í†µ"ì€ ì•„ë¬´ê²ƒë„ ì•ˆ í•¨
                    }

                    // 3. ìœ íš¨í•œ Triggerê°€ ìˆìœ¼ë©´ ì‹¤í–‰(SetTrigger)!
                    if (!string.IsNullOrEmpty(triggerName))
                    {
                        Debug.Log($"[Animator] {triggerName} íŠ¸ë¦¬ê±° ì‹¤í–‰!");
                        activeAnimator.SetTrigger(triggerName);
                    }
                }
            }
        }

        // 4. ë§ˆì§€ë§‰ ëŒ€í™”ë¡œ ì €ì¥
        _lastConversationText = finalText;
        _lastActivePersonaDomain = activePersona;
    }

    // ë°°ê²½ í´ë¦­í•´ì„œ ë‹«ê¸°
    public void CloseChatFlow()
    {
        if (inputFieldAnimator != null)
            inputFieldAnimator.HideUI();

        if (backgroundClickCatcher != null)
            backgroundClickCatcher.SetActive(false);

        if (_activePopup != null)
        {
            Destroy(_activePopup.gameObject);
            _activePopup = null;
        }
    }

    // ì™¸ë¶€ì—ì„œ ìºë¦­í„° ë°”ë€Œì—ˆë‹¤ê³  ì•Œë ¤ì¤„ ë•Œ
    public void OnCharacterSwitched()
    {
        _lastConversationText = DEFAULT_GREETING;
        if (_activePopup != null)
            CloseChatFlow();
    }

    // ì–´ë–¤ ìºë¦­í„°ê°€ ì¼œì ¸ìˆëŠ”ì§€ íŒë‹¨
    private string ResolveActivePersona()
    {
        if (kirbyCharacter != null && kirbyCharacter.activeInHierarchy)
            return kirbyPersonaName;

        if (shihoCharacter != null && shihoCharacter.activeInHierarchy)
            return shihoPersonaName;

        return currentPersonaDomain; // ê¸°ë³¸
    }

    // --- Gemini JSON í…ìŠ¤íŠ¸ ë½‘ê¸° (ê¸°ì¡´ ë°©ì‹) ---
    private static string ExtractGeminiText(string json)
    {
        if (string.IsNullOrEmpty(json)) return null;

        try
        {
            var root = JsonUtility.FromJson<GeminiRoot>(json);
            var text = root?.candidates != null && root.candidates.Length > 0
                ? root.candidates[0]?.content?.parts != null && root.candidates[0].content.parts.Length > 0
                    ? root.candidates[0].content.parts[0]?.text
                    : null
                : null;

            if (string.IsNullOrWhiteSpace(text)) return null;

            // "(117ì)" ê¼¬ë¦¬í‘œ ì œê±°
            text = Regex.Replace(text, @"\s*\(\d+ì\)\s*$", "");
            return text;
        }
        catch
        {
            return null;
        }
    }

    /// <summary>
    /// í…ìŠ¤íŠ¸ë¥¼ ì •ë¦¬í•˜ê³  ê°ì • íƒœê·¸ë¥¼ ê°ì§€í•©ë‹ˆë‹¤.
    /// (ìˆ«ìì) ê¼¬ë¦¬í‘œë¥¼ ì œê±°í•˜ê³ , (ê°ì •) íƒœê·¸ë„ ê°ì§€ í›„ ì œê±°í•©ë‹ˆë‹¤.
    /// </summary>
    /// <param name="src">ì›ë³¸ í…ìŠ¤íŠ¸</param>
    /// <returns>(ì •ë¦¬ëœ í…ìŠ¤íŠ¸, ê°ì§€ëœ ê°ì •(ì—†ìœ¼ë©´ null))</returns>
    private (string cleaned, string emotion) CleanAndDetectEmotion(string src)
    {
        if (string.IsNullOrWhiteSpace(src)) return (src, null);

        // â‘  ë¬¸ì¥ ëì˜ "(ìˆ«ìì)" ê¼¬ë¦¬í‘œ ì œê±° (ì˜ˆ: "(200ì)", "(117ì)")
        string temp = Regex.Replace(src, @"\s*\(\d+ì\)\s*$", "");

        // â‘¡ ë¬¸ì¥ ëì˜ ê°ì • íƒœê·¸ ê°ì§€: (ê¸°ì¨|ìŠ¬í””|ë³´í†µ|í™”ë‚¨)
        var m = Regex.Match(temp, @"\((ê¸°ì¨|ìŠ¬í””|ë³´í†µ|í™”ë‚¨)\)\s*$");
        string emotion = null;
        string cleaned = temp; // ê¸°ë³¸ê°’ì€ (ìˆ«ìì)ë§Œ ì œê±°ëœ í…ìŠ¤íŠ¸

        if (m.Success)
        {
            // â­ï¸ ê°ì •ì´ ê°ì§€ë˜ë©´
            emotion = m.Groups[1].Value;
            // â­ï¸ í…ìŠ¤íŠ¸ì—ì„œë„ (ê°ì •) íƒœê·¸ ë¶€ë¶„ì„ ì œê±°í•©ë‹ˆë‹¤.
            cleaned = temp.Substring(0, m.Index).TrimEnd();
        }

        return (cleaned, emotion);
    }

    // =====================
    // ë°±ì—”ë“œ ì‘ë‹µìš© êµ¬ì¡°ì²´
    // =====================
    [Serializable]
    private class BackendResponse
    {
        public string reply; // ëŒ€í™” í…ìŠ¤íŠ¸
        public BackendTask task; // ì•ŒëŒì´ ìˆìœ¼ë©´ ì±„ì›Œì§
    }

    [Serializable]
    private class BackendTask
    {
        public string time;
        public string text;
    }

    // =====================
    // Gemini ì›í˜• íŒŒì‹±ìš© êµ¬ì¡°ì²´
    // =====================
    [Serializable]
    private class GeminiRoot { public Candidate[] candidates; }

    [Serializable]
    private class Candidate
    {
        public Content content;
        public string finishReason;
        public int index;
    }

    [Serializable]
    private class Content
    {
        public Part[] parts;
        public string role;
    }

    [Serializable]
    private class Part
    {
        public string text;
    }
}


// ======================================================================
// â­ï¸ [ì‹ ê·œ ì¶”ê°€] P/Invokeë¥¼ ì‚¬ìš©í•œ Windows ë°ìŠ¤í¬íƒ‘ ìº¡ì²˜ í—¬í¼ í´ë˜ìŠ¤
// (System.Drawing.dll ì°¸ì¡°ê°€ í•„ìš”í•©ë‹ˆë‹¤!)
// ======================================================================
public class DesktopCapture
{
    // C#ì—ì„œ ì‚¬ìš©í•  GDI í•¨ìˆ˜ë“¤ ì„í¬íŠ¸
    [DllImport("gdi32.dll", SetLastError = true)]
    private static extern bool BitBlt(
        IntPtr hdcDest, int nXDest, int nYDest, int nWidth, int nHeight,
        IntPtr hdcSrc, int nXSrc, int nYSrc,
        TernaryRasterOperations dwRop
    );

    [DllImport("user32.dll")]
    private static extern IntPtr GetDesktopWindow();

    [DllImport("user32.dll")]
    private static extern IntPtr GetWindowDC(IntPtr hWnd);

    [DllImport("user32.dll")]
    private static extern int ReleaseDC(IntPtr hWnd, IntPtr hDC);

    [DllImport("user32.dll")]
    private static extern int GetSystemMetrics(int nIndex);

    [DllImport("gdi32.dll")]
    private static extern IntPtr CreateCompatibleDC(IntPtr hDC);

    [DllImport("gdi32.dll")]
    private static extern IntPtr CreateCompatibleBitmap(IntPtr hDC, int nWidth, int nHeight);

    [DllImport("gdi32.dll")]
    private static extern IntPtr SelectObject(IntPtr hDC, IntPtr hGdiObj);

    [DllImport("gdi32.dll")]
    private static extern bool DeleteObject(IntPtr hObject);

    [DllImport("gdi32.dll")]
    private static extern bool DeleteDC(IntPtr hDC);

    // GetSystemMetrics ìƒìˆ˜
    private const int SM_CXSCREEN = 0;
    private const int SM_CYSCREEN = 1;

    // BitBlt ì—°ì‚°
    private enum TernaryRasterOperations : uint
    {
        SRCCOPY = 0x00CC0020
    }

    /// <summary>
    /// (Windows ì „ìš©) í˜„ì¬ ë°”íƒ•í™”ë©´ ì „ì²´ë¥¼ ìº¡ì²˜í•˜ì—¬ PNG ë°”ì´íŠ¸ ë°°ì—´ë¡œ ë°˜í™˜í•©ë‹ˆë‹¤.
    /// </summary>
    /// <returns>PNG ì´ë¯¸ì§€ì˜ byte[] ë˜ëŠ” ì‹¤íŒ¨ ì‹œ null</returns>
    public static byte[] CaptureDesktopAsPNG()
    {
        IntPtr hDesktop = GetDesktopWindow();
        if (hDesktop == IntPtr.Zero) return null;

        IntPtr hdcSrc = GetWindowDC(hDesktop);
        if (hdcSrc == IntPtr.Zero) return null;

        int width = GetSystemMetrics(SM_CXSCREEN);
        int height = GetSystemMetrics(SM_CYSCREEN);

        IntPtr hdcDest = CreateCompatibleDC(hdcSrc);
        IntPtr hBitmap = CreateCompatibleBitmap(hdcSrc, width, height);
        IntPtr hOld = SelectObject(hdcDest, hBitmap);

        try
        {
            // í™”ë©´ DCì˜ ë‚´ìš©ì„ ë¹„íŠ¸ë§µ DCë¡œ ë³µì‚¬
            BitBlt(hdcDest, 0, 0, width, height, hdcSrc, 0, 0, TernaryRasterOperations.SRCCOPY);

            // GDI ë¹„íŠ¸ë§µ í•¸ë“¤(hBitmap)ì„ System.Drawing.Bitmap ê°ì²´ë¡œ ë³€í™˜
            using (Bitmap bitmap = Bitmap.FromHbitmap(hBitmap))
            {
                // Bitmapì„ ë©”ëª¨ë¦¬ ìŠ¤íŠ¸ë¦¼ì— PNG í˜•ì‹ìœ¼ë¡œ ì €ì¥
                using (MemoryStream ms = new MemoryStream())
                {
                    bitmap.Save(ms, ImageFormat.Png);
                    return ms.ToArray();
                }
            }
        }
        catch (Exception ex)
        {
            Debug.LogError($"[DesktopCapture] ìº¡ì²˜ ì‹¤íŒ¨: {ex.Message}");
            return null;
        }
        finally
        {
            // ì‚¬ìš©í•œ GDI ê°ì²´ë“¤ í•´ì œ
            SelectObject(hdcDest, hOld);
            DeleteObject(hBitmap);
            DeleteDC(hdcDest);
            ReleaseDC(hDesktop, hdcSrc);
        }
    }
}